[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/Spells/Irregular rock Spritesheet.png" type="Texture" id=1]
[ext_resource path="res://scripts/Spells/FallRock.gd" type="Script" id=2]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "boom"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 9, 10, 11 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_cm_end_book"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "fall"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}

[sub_resource type="CircleShape2D" id=4]
radius = 11.3137

[sub_resource type="CircleShape2D" id=5]
radius = 17.0294

[sub_resource type="CircleShape2D" id=7]
radius = 16.0

[node name="FallRock" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 528
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 6
vframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "fall"
anims/RESET = SubResource( 2 )
anims/boom = SubResource( 6 )
anims/fall = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="BoomArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 529

[node name="CollisionShape2D" type="CollisionShape2D" parent="BoomArea"]
shape = SubResource( 5 )

[node name="RayBoom" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 16 )
collision_mask = 529

[node name="RayBoom3" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -16, 8 )
collision_mask = 529

[node name="RayBoom4" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 16, 8 )
collision_mask = 529

[node name="AttackArea" type="Area2D" parent="." groups=["Enemies"]]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource( 7 )
